<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainGasEtaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_appNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/design_default_color_primary_dark"
                android:gravity="center_horizontal"
                android:text="@string/nome_aplicativo"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="16dp"
                android:src="@mipmap/ic_launcher_round" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText_gasolina"
                    android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="48dp"
                    android:ems="10"
                    android:hint="@string/preco_gasolina"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/editText_etanol"
                    android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:hint="@string/preco_etanol"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_calcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/calcular" />

            <TextView
                android:id="@+id/textView_Resultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/design_default_color_primary_dark"
                android:gravity="center"
                android:text="@string/resultado"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btn_limpar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/limpar" />

            <Button
                android:id="@+id/btn_salvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/salvar" />

            <Button
                android:id="@+id/btn_finalizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/finalizar" />

        </LinearLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>